@@ -1,5 +1,6 @@
 Changes for 1.5.1:
 
+ - [DEV-141] improved performance of ZABBIX Proxy module (Sasha)
  - [DEV-140] added support of zabbix[proxy,<proxyname>,lastaccess] (Sasha)
  - [DEV-124] screen actions moved to Audit, added filter for Audit (Artem)
  - [DEV-98] added support of ZABBIX Proxy (Sasha)
